fix wrong height calculations with TOTALLY PLANNED SOLUTION

--- a/src/app/shared/components/flashcard/flashcard-layout/flashcard-layout.component.css
+++ b/src/app/shared/components/flashcard/flashcard-layout/flashcard-layout.component.css
@@ -1,3 +1,3 @@
 .h-33 {
-    height: 33%!important;
+    height: 33.33%!important;
 }
